// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Daylight when sunset is after sunrise 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="383.8967"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 26.659%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="768.6333333333333"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 53.377%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="287.46996666666666"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 19.963%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Daylight when sunset is after sunrise 2`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="432.5300833333333"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 30.037%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="671.3666666666667"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 46.623%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="335.10325"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 23.271%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders DaylightAcrossDays 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="1152.5300833333333"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 80.037%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="-768.6333333333333"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: -53.377%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="1055.10325"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 73.271%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders DaylightDuringDay 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="383.8967"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 26.659%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="768.6333333333333"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 53.377%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="287.46996666666666"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 19.963%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;
